syntax = "proto3";

option csharp_namespace = "GrpcGreeter";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc GetGreeting (GreetRequest) returns (GreetReply);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

// The request message containing the user's request
message GreetRequest {
	int32 type = 1;
	string name = 2;
}

// The response message to return a greeting
message GreetReply {
	string note = 1;
}